fix alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1054,6 +1054,10 @@ section {
   height: 100%;
 }
 
+.center_image_3 {
+  width: 100%;
+  height: 100vh;
+}
 div.container_left {
   text-align: center;
 }
